--- a/src/main/resources/templates/add-article.html
+++ b/src/main/resources/templates/add-article.html
@@ -2,8 +2,17 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Create article</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" th:href="@{/css/common.css}">
 </head>
 <body>
+<header class="header">
+    <nav class="nav">
+        <a href="/article/all" class="nav-btn">Liste d'Articles</a>
+        <a href="/hello/private" class="nav-btn">Accueil</a>
+    </nav>
+</header>
 <h2>Créer un article</h2>
 <form th:action="@{/article/new}" method="post">
     <label>Titre :</label>
