--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -2,16 +2,19 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
         <title>Create user</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" th:href="@{/css/common.css}">
     </head>
-    <body>
+    <body class="form">
         <h2>Créer un user</h2>
-        <form th:action="@{/user-app/register}" method="post">
+        <form th:action="@{/user-app/register}" method="post" class="form-content">
             <label>Email :</label>
             <input type="text" name="email" />
             <label>Mot de passe :</label>
             <input type="password" name="password" />
             <br/>
-            <button type="submit">Valider</button>
+            <button type="submit" class="btn-submit">Valider</button>
         </form>
     </body>
 </html>
