--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,9 +10,9 @@
 <h2>Connexion</h2>
 <form th:action="@{/login}" method="post" class="form-content">
     <label>Email :</label>
-    <input type="text" name="username" /><br/>
+    <input type="text" name="username" />
     <label>Mot de passe :</label>
-    <input type="password" name="password" /><br/>
+    <input type="password" name="password" />
     <button type="submit" class="btn-submit">Se connecter</button>
 </form>
 </body>
